[gd_scene load_steps=29 format=2]

[ext_resource path="res://MORIS_/zz_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://MORIS_/Moris.gd" type="Script" id=2]
[ext_resource path="res://lletres/Scratch Boys.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MORIS_/vida.gd" type="Script" id=4]
[ext_resource path="res://MORIS_/icones/icon_vida.jpg" type="Texture" id=5]
[ext_resource path="res://MORIS_/mana.gd" type="Script" id=6]
[ext_resource path="res://MORIS_/icones/color_azul.jpg" type="Texture" id=7]
[ext_resource path="res://pantalla_pausa.tscn" type="PackedScene" id=8]
[ext_resource path="res://pantalla_controls_en_pausa.tscn" type="PackedScene" id=9]
[ext_resource path="res://totes_les_bombolles.tscn" type="PackedScene" id=10]
[ext_resource path="res://MORIS_/MorisRoot.gd" type="Script" id=11]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 471, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 942, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1413, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 471, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 942, 0, 471, 439 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1413, 0, 471, 439 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "iddle",
"speed": 3.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 98.933, 195.605 )

[sub_resource type="CapsuleShape2D" id=14]
radius = 132.205
height = 213.409

[sub_resource type="DynamicFont" id=15]
size = 68
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 100
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Moris" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Moris"]
material = SubResource( 2 )
position = Vector2( 100.5, 262.022 )
frames = SubResource( 12 )
animation = "run"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moris"]
position = Vector2( 65.2829, 293.865 )
shape = SubResource( 13 )

[node name="area_atac" type="Area2D" parent="Moris"]
position = Vector2( 2.99658, 0 )

[node name="colision_atac" type="CollisionShape2D" parent="Moris/area_atac"]
position = Vector2( 66.9412, 289.202 )
rotation = 1.56823
shape = SubResource( 14 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="Moris"]
position = Vector2( 52.7768, 252.96 )
current = true
zoom = Vector2( 3, 2.8 )

[node name="Label" type="Label" parent="Moris"]
margin_left = -92.6426
margin_top = 133.538
margin_right = 293.357
margin_bottom = 240.538
custom_fonts/font = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pot_atacar" type="Timer" parent="Moris"]
wait_time = 2.0
one_shot = true

[node name="curar" type="Timer" parent="Moris"]
wait_time = 3.0
one_shot = true

[node name="aigua" type="Timer" parent="Moris"]
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="vida" type="TextureProgress" parent="CanvasLayer"]
margin_left = 28.2405
margin_top = 8.40507
margin_right = 478.241
margin_bottom = 458.405
rect_scale = Vector2( 0.7, 0.1 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/vida"]

[node name="text_vida" type="Label" parent="CanvasLayer/vida"]
margin_left = 458.857
margin_top = 77.0
margin_right = 551.857
margin_bottom = 462.0
custom_fonts/font = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mana" type="TextureProgress" parent="CanvasLayer"]
margin_left = 28.541
margin_top = 57.0819
margin_right = 1028.54
margin_bottom = 1057.08
rect_scale = Vector2( 0.42, 0.1 )
max_value = 500.0
value = 500.0
texture_progress = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/mana"]

[node name="text_mana" type="Label" parent="CanvasLayer/mana"]
margin_left = 1011.35
margin_top = 231.406
margin_right = 1303.35
margin_bottom = 911.406
custom_fonts/font = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="totes_les_bombolles" parent="CanvasLayer" instance=ExtResource( 10 )]
position = Vector2( 61.0397, 192.282 )
scale = Vector2( 0.5, 0.5 )

[node name="pantalla_controls_en_pausa" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="pantalla_pausa" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
[connection signal="canvi_mana" from="Moris" to="CanvasLayer/mana" method="_on_Moris_canvi_mana"]
[connection signal="canvi_vida" from="Moris" to="CanvasLayer/vida" method="_on_Moris_canvi_vida"]
[connection signal="oxigen" from="Moris" to="CanvasLayer/totes_les_bombolles" method="_on_Moris_oxigen"]
[connection signal="animation_finished" from="Moris/AnimatedSprite" to="Moris" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Moris/area_atac" to="Moris" method="_on_area_atac_body_entered"]
[connection signal="timeout" from="Moris/pot_atacar" to="Moris" method="_on_pot_atacar_timeout"]
[connection signal="timeout" from="Moris/curar" to="Moris" method="_on_curar_timeout"]
[connection signal="timeout" from="Moris/aigua" to="Moris" method="_on_aigua_timeout"]
[connection signal="tween_completed" from="CanvasLayer/vida/Tween" to="CanvasLayer/vida" method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="CanvasLayer/mana/Tween" to="CanvasLayer/mana" method="_on_Tween_tween_completed"]
